# MI_Quantify

./: .gitignore  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  frontend-guide.md  python-guide.md  rust-guide.md
src/: App.vue  main.ts
src-python/: mi-quantify-sidecar.spec  pyproject.toml  run.py
src-python/app/: main.py
src-python/app/routers/: finance.py  fundflow.py  home.py  investment.py  kline.py  market.py  news.py  openclaw.py  sector.py
src-python/app/services/: finance_service.py  fundflow_service.py  home_service.py  investment_service.py  kline_service.py  market_service.py  network_env.py  news_service.py  openclaw_service.py  search_service.py  sector_service.py  stock_service.py
src-tauri/: Cargo.toml  tauri.ci.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  storage.rs
src-tauri/src/commands/: ai.rs  app_store.rs  chat.rs  mod.rs  monitor.rs  notifications.rs  scheduler.rs  sidecar.rs  wechat.rs
src/agents/: diagnosisAgent.ts  investmentAgent.ts  modeRouterAgent.ts  recommendationAgent.ts
src/composables/: useAiChat.ts  useAiInsights.ts  useAiTaskLogger.ts  useNotifications.ts  usePolling.ts  useRealtimeTask.ts  useSidecar.ts
src/router/: index.ts
src/stores/: app.ts  appUpdate.ts  market.ts  news.ts  settings.ts  strategy.ts
src/strategies/: DataSourceStrategies.ts  LlmProviderStrategies.ts
src/types/: ai.ts  ask.ts  home.ts  index.ts  insight.ts  investment.ts  news.ts  notification.ts  recommendation.ts  settings.ts  stock.ts  strategy-pattern.ts  strategy.ts
src/utils/: color.ts  (+10 more)
(+90 files in other folders)
